# eleveia-api

./: .env  .env.example  Dockerfile  README-DOCKER.md  README.md  conftest.py  db.sqlite3  docker-compose.yml  docker-manager.sh  dockerignore  entrypoint.sh  migrate_data.py  nginx.conf  ofelia-config.ini  pyproject.toml  pytest.ini.py  validate_imports.py
apps/contacts/: admin.py  apps.py  celery.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py  views_new.py
apps/dashboard/: admin.py  celery.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/faqs/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/leads/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/schools/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/storage/: apps.py  factories.py  models.py  serializers.py  urls.py  views.py
apps/tickets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
core/: mixins.py  pagination.py  permissions.py
core/tests/: base.py
eleveai/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
eleveai/migrations/: 0001_initial.py  (+11 more)
(+74 files in other folders)
